# ModelicaCppRunner

./: .gitmodules  CMakeLists.txt  README.md  omc-boehm-gc.suppr
scripts/: build.sh  configure.sh  run.sh  valgrind.sh
src/: CMakeLists.txt  main.cpp  utils.hpp
